--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ h1 {
 .editor-container {
   margin: 20px auto 20px auto;
   border-radius: 2px;
-  max-width: 600px;
+  width: 100%;
   color: #000;
   position: relative;
   line-height: 20px;
@@ -72,7 +72,6 @@ h1 {
   outline: 0;
   padding: 15px 10px;
   caret-color: #444;
-  /* background-color: red; */
 }
 
 .editor-placeholder {
@@ -473,7 +472,7 @@ i.chevron-down {
   display: inline-block;
   height: 8px;
   width: 8px;
-  background-image: url(../public/images/emoji/bold.png);
+  background-image: url(../public/images/emoji/arrow-down-sign.png);
 }
 
 #block-controls button:hover {
